wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  labels:
    app: wordpress
    type: frontend
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wp.20.71.93.216.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: http-sv-port
